--- a/G00374677/src/app/tab1/tab1.page.html
+++ b/G00374677/src/app/tab1/tab1.page.html
@@ -1,11 +1,9 @@
 
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="clear-weather">
+  <div class="ion-padding">
+    <span><img src={{icon}}><span style="position: relative;bottom:15px;"> 
+    {{temperature}} in {{place}}
+    </span></span>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+  </div></ion-content>
