Data request from openweathermap succesful, cannot display data using data binding in tab1.page.html

--- a/G00374677/src/app/tab1/tab1.page.html
+++ b/G00374677/src/app/tab1/tab1.page.html
@@ -2,8 +2,10 @@
 
 <ion-content class="clear-weather">
   <div class="ion-padding">
+    <span >{{temperature}}</span>
     <span><img src={{icon}}><span style="position: relative;bottom:15px;"> 
-    {{temperature}} in {{place}}
+     in <h4>{{place}} </h4>
     </span></span>
 
-  </div></ion-content>
+  </div>
+</ion-content>
