--- a/G00374677/src/app/tab1/tab1.page.scss
+++ b/G00374677/src/app/tab1/tab1.page.scss
@@ -1,3 +1,40 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+
+.table-layout {
+  table-layout: fixed;
+  width: 100%;
+  margin-top: 80px;
+}
+.table-layout th{
+  border-right: 1px solid #909090;
+  border-top: 1px solid #909090;
+  padding-top: 10px;
+}
+.table-layout td{
+  text-align: center;
+  border-right: 1px solid #909090;
+}
+
+.table-layout2{
+  table-layout: fixed;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.table-layout2 th{
+  border-right: 1px solid #909090;
+  padding-bottom: 10px;
+}
+.table-layout2 td{
+  text-align: center;
+  border-right: 1px solid #909090;
+}
+
+
+.weather-layout{
+  text-align: center;
+  padding-top: 50px;
+}
+
