--- a/G00374677/src/app/tabs/tabs.page.html
+++ b/G00374677/src/app/tabs/tabs.page.html
@@ -7,8 +7,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="sunny-outline"></ion-icon>
-      <ion-label>Forecast</ion-label>
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Search</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
