App Finished, Added About page, and Settings page, Included a toggle button to change from Celsius to Farenheit

--- a/G00374677/src/app/tab1/tab1.page.html
+++ b/G00374677/src/app/tab1/tab1.page.html
@@ -6,8 +6,8 @@
     <h4>{{weatherData.country}}</h4>
     <img src="{{weatherData.conditionIcon}}" width="100" height="100">
     <h4>{{weatherData.conditionText}}</h4>
-    <h4>{{weatherData.temp_c}}°C</h4>
-    <p>Feels Like {{weatherData.feelsLike_c}}°C </p>
+    <h4>{{weatherData.temp_c}}</h4>
+    <p>Feels Like {{weatherData.feelsLike_c}} </p>
   </div>
 
   <table class="table-layout">
