Project Finished, added comments

--- a/G00374677/src/app/about/about.page.html
+++ b/G00374677/src/app/about/about.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button [text]="buttonText" [icon]="buttonIcon">
+      <ion-back-button>
       </ion-back-button>
     </ion-buttons>
     <ion-title>About</ion-title>
@@ -17,8 +17,9 @@
       <p>I have created this app for my college assignment in Mobile Application Development</p>
       <br>
       <p>I am currently studying in GMIT Galway, This is my second year in this Institute </p>
-      <p>This is a weather app and I have chosen the weather application because it gave me a lot of opportunity to learn
-        all the features in angular and ionic, and I have gained a better understanding on how to 
+      <p>This is a weather app and I have chosen the weather application because it gave me a lot of opportunity to
+        learn
+        all the features in angular and ionic, and I have gained a better understanding on how to
         build an application from scratch.
       </p>
       <br>
@@ -27,7 +28,7 @@
       <h5>Here is the link to my github page</h5>
       <a href="https://github.com/IngarsPoliters/G00374677">Link to my GitHub</a>
 
-      
+
     </div>
   </div>
 
