--- a/G00374677/src/app/tab2/tab2.page.html
+++ b/G00374677/src/app/tab2/tab2.page.html
@@ -8,21 +8,21 @@
 </ion-header>
 
 <ion-content [ngClass]="background">
-<div class="container">
+  <div class="container">
 
-  <div class="form-group">
-    <label>Enter address</label>
-    <input  type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" #search>
+    <div class="form-group">
+      <label>Enter address</label>
+      <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+        placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" #search>
+    </div>
+
+    <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+      <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"></agm-marker>
+    </agm-map>
+
+
+    <div>{{latitude}}</div>
+    <div>{{longitude}}</div>
+
   </div>
-
-  <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
-    <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
-      (dragEnd)="markerDragEnd($event)"></agm-marker>
-  </agm-map>
-
- 
-  <div>{{latitude}}</div>
-  <div>{{longitude}}</div>
-
-</div>
 </ion-content>
